# TinyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TinyEngine.cpp  TinyEngine.h  fbuild.bff  main.cpp  main.h
src/components/: component.cpp  component.h  sprite.cpp  sprite.h
src/core/: ecs.cpp  ecs.h  entity.cpp  entity.h  event.cpp  event.h
src/utils/: map.cpp  map.h
